--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,14 @@ td {
     font-size: 2rem;
     cursor: pointer;
 }
+
+header {
+    width: 100%;
+    height: 100px;
+    background-color: firebrick;
+    opacity: 0.8;
+}
+
+header ul li {
+    border: 1px solid black
+}
